Remove dead code from audio open.  Found by isaki@. Better error handling incase memory for the streams' ringbuffers cannot be allocated.

Addresses PR kern/52433.